Updated cohen's weighted kappa and other eval metrics

--- a/benchmark/benchmark.ipynb
+++ b/benchmark/benchmark.ipynb
@@ -120,6 +120,7 @@
     "    results = []\n",
     "    if os.path.exists(old_file):\n",
     "        with open(old_file, 'rb') as f:\n",
+    "            \n",
     "            results = pickle.load(f)\n",
     "\n",
     "    for index, statement in enumerate(tqdm(statements)):\n",
@@ -12892,11 +12893,427 @@
     "        df_1.at[index, f'{model}_baseline_results'] = results\n",
     "        df_1.to_pickle(output_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = 'results_v2_gemini.pkl'\n",
+    "if os.path.exists(output_file):\n",
+    "    df = pd.read_pickle(output_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://content.govdelivery.com/accounts/WIGOV/bulletins/3c856e9'"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['gemini_results'][0][0]['claims'][0].components[2].answer.citations[0].source_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multiclass classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniconda/base/envs/factchecker/lib/python3.10/site-packages/pydantic/_internal/_config.py:345: UserWarning: Valid config keys have changed in V2:\n",
+      "* 'fields' has been removed\n",
+      "  warnings.warn(message, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sys\n",
+    "sys.path.append('../pipeline_v2/')\n",
+    "import main \n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "\n",
+    "df_gemini = pd.read_pickle('results_v2_gemini.pkl')\n",
+    "with open('results_v2_mistral.pkl', 'rb') as file:\n",
+    "    data = pickle.load(file)\n",
+    "    df_mistral = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the ordinal mapping\n",
+    "VERDICT_MAP = {\n",
+    "    \"TRUE\": 5,\n",
+    "    \"MOSTLY TRUE\": 4,\n",
+    "    \"HALF TRUE\": 3,\n",
+    "    \"MOSTLY FALSE\": 2,\n",
+    "    \"FALSE\": 1,\n",
+    "    \"UNVERIFIABLE\": 0,\n",
+    "    # Weird cases\n",
+    "    \"PANTS ON FIRE\": 1, # Pants on fire is the same as false\n",
+    "    \"MOSTLY UNVERIFIABLE\": 0,\n",
+    "    \"INDIFFERENT\": 0,\n",
+    "    'MOSTLY HALF TRUE': 4,\n",
+    "    'PARTIALLY TRUE': 3,\n",
+    "}\n",
+    "\n",
+    "def get_results(df):\n",
+    "    # Convert verdicts to numeric values\n",
+    "    true_verdicts = [VERDICT_MAP[v] for v in df['verdict']]\n",
+    "    pass1_preds_baseline = [VERDICT_MAP[v] for v in df['baseline_pass1_verdict']]\n",
+    "    pass1_preds_pipeline = [VERDICT_MAP[v] for v in df['pipeline_pass1_verdict']]\n",
+    "    pass3_preds_baseline = [VERDICT_MAP[v] for v in df['baseline_pass3_verdict']]\n",
+    "    pass3_preds_pipeline = [VERDICT_MAP[v] for v in df['pipeline_pass3_verdict']]\n",
+    "\n",
+    "    cohen_base_1_idx = [i for i, e in enumerate(pass1_preds_baseline) if e == 0]\n",
+    "    cohen_base_1_true = [e for i, e in enumerate(true_verdicts) if i not in cohen_base_1_idx]\n",
+    "    cohen_base_1_pred = [e for i, e in enumerate(pass1_preds_baseline) if i not in cohen_base_1_idx]\n",
+    "\n",
+    "    cohen_pipe_1_idx = [i for i, e in enumerate(pass1_preds_pipeline) if e == 0]\n",
+    "    cohen_pipe_1_true = [e for i, e in enumerate(true_verdicts) if i not in cohen_pipe_1_idx]\n",
+    "    cohen_pipe_1_pred = [e for i, e in enumerate(pass1_preds_pipeline) if i not in cohen_pipe_1_idx]\n",
+    "\n",
+    "    cohen_base_3_idx = [i for i, e in enumerate(pass3_preds_baseline) if e == 0]\n",
+    "    cohen_base_3_true = [e for i, e in enumerate(true_verdicts) if i not in cohen_base_3_idx]\n",
+    "    cohen_base_3_pred = [e for i, e in enumerate(pass3_preds_baseline) if i not in cohen_base_3_idx]\n",
+    "\n",
+    "    cohen_pipe_3_idx = [i for i, e in enumerate(pass3_preds_pipeline) if e == 0]\n",
+    "    cohen_pipe_3_true = [e for i, e in enumerate(true_verdicts) if i not in cohen_pipe_3_idx]\n",
+    "    cohen_pipe_3_pred = [e for i, e in enumerate(pass3_preds_pipeline) if i not in cohen_pipe_3_idx]\n",
+    "    \n",
+    "    all_preds = [pass1_preds_baseline, pass1_preds_pipeline, pass3_preds_baseline, pass3_preds_pipeline]\n",
+    "    cohen_true = [cohen_base_1_true, cohen_pipe_1_true, cohen_base_3_true, cohen_pipe_3_true]\n",
+    "    cohen_pred = [cohen_base_1_pred, cohen_pipe_1_pred, cohen_base_3_pred, cohen_pipe_3_pred]\n",
+    "    return true_verdicts, all_preds, cohen_true, cohen_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gemini_true, gemini_preds, gemini_cohen_true , gemini_cohen_pred = get_results(df_gemini)\n",
+    "mistral_true, mistral_preds, mistral_cohen_true , mistral_cohen_pred = get_results(df_mistral)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "from sklearn.metrics import cohen_kappa_score\n",
+    "\n",
+    "gemini_mcc = []\n",
+    "gemini_cohen = []\n",
+    "names = ['pass@1_base','pass@1_pipe','pass@3_base','pass@3_pipe']\n",
+    "for p in gemini_preds:\n",
+    "    m = matthews_corrcoef(gemini_true, p)\n",
+    "    gemini_mcc.append(m.item())\n",
+    "for t, p in zip(gemini_cohen_true, gemini_cohen_pred):\n",
+    "    c = cohen_kappa_score(t, p, weights='quadratic')\n",
+    "    gemini_cohen.append(c.item())\n",
+    "gemini_mcc_dict = dict(zip(names, gemini_mcc))\n",
+    "gemini_cohen_dict = dict(zip(names, gemini_cohen))\n",
+    "\n",
+    "mistral_mcc = []\n",
+    "mistral_cohen = []\n",
+    "for p in mistral_preds:\n",
+    "    m = matthews_corrcoef(mistral_true, p)\n",
+    "    mistral_mcc.append(m.item())\n",
+    "for t, p in zip(mistral_cohen_true, mistral_cohen_pred):\n",
+    "    c = cohen_kappa_score(t, p)\n",
+    "    mistral_cohen.append(c.item())\n",
+    "mistral_mcc_dict = dict(zip(names, mistral_mcc))\n",
+    "mistral_cohen_dict = dict(zip(names, mistral_cohen))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pass@1_base': 0.11012375984197935,\n",
+       " 'pass@1_pipe': 0.13699124436478005,\n",
+       " 'pass@3_base': 0.13346327093465685,\n",
+       " 'pass@3_pipe': 0.3133629050803692}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gemini_mcc_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pass@1_base': 0.43413173652694614,\n",
+       " 'pass@1_pipe': 0.6813573200394962,\n",
+       " 'pass@3_base': 0.4436031488492278,\n",
+       " 'pass@3_pipe': 0.809556155668583}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gemini_cohen_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pass@1_base': 0.0668480817208585,\n",
+       " 'pass@1_pipe': 0.12211055979919401,\n",
+       " 'pass@3_base': 0.09211170851742229,\n",
+       " 'pass@3_pipe': 0.3071386000131577}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mistral_mcc_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, balanced_accuracy_score, precision_score, recall_score, f1_score\n",
+    "def generate_metrics(y_true, y_pred):\n",
+    "    # Generate the cost matrix for 6 classes\n",
+    "    # cost_matrix = generate_cost_matrix(6)\n",
+    "\n",
+    "    # Calculate the confusion matrix with the cost matrix\n",
+    "    # cm = confusion_matrix(y_true, y_pred, sample_weight=None, labels=num_labels)\n",
+    "    # weighted_cm = cm * cost_matrix\n",
+    "\n",
+    "    # Calculate the weighted F1 score\n",
+    "    balanced_acc = balanced_accuracy_score(y_true, y_pred)\n",
+    "    weighted_precision = precision_score(y_true, y_pred, average='macro',labels=np.unique(y_true))\n",
+    "    weighted_recall = recall_score(y_true, y_pred, average='macro',labels=np.unique(y_true))\n",
+    "    weighted_f1 = f1_score(y_true, y_pred, average='macro')\n",
+    "\n",
+    "    print(f\"balanced_acc: {weighted_precision:.2f}\")\n",
+    "    print(f\"macro_precision: {weighted_precision:.2f}\")\n",
+    "    print(f\"macro_recall: {weighted_recall:.2f}\")\n",
+    "    print(f\"macro_f1: {weighted_f1:.2f}\")\n",
+    "\n",
+    "    return balanced_acc, weighted_precision, weighted_recall, weighted_f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "balanced_acc: 0.28\n",
+      "macro_precision: 0.28\n",
+      "macro_recall: 0.18\n",
+      "macro_f1: 0.17\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniconda/base/envs/factchecker/lib/python3.10/site-packages/sklearn/metrics/_classification.py:2524: UserWarning: y_pred contains classes not in y_true\n",
+      "  warnings.warn(\"y_pred contains classes not in y_true\")\n",
+      "/opt/homebrew/Caskroom/miniconda/base/envs/factchecker/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.1767195767195767),\n",
+       " 0.28388313779618124,\n",
+       " 0.1767195767195767,\n",
+       " 0.16665419978182952)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_metrics(gemini_true, gemini_preds[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 62, 2: 35, 1: 27, 4: 23, 5: 3})"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "Counter(gemini_preds[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pycm import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm_1 = ConfusionMatrix(gemini_true, gemini_preds[0],digit=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pass@1_base': 0.17227722772277243,\n",
+       " 'pass@1_pipe': 0.1943163405210021,\n",
+       " 'pass@3_base': 0.19611537904044063,\n",
+       " 'pass@3_pipe': 0.3825996713655625}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gemini_cohen_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data from https://allisonhorst.github.io/palmerpenguins/\n",
+    "plt.rcParams[\"font.family\"] = \"serif\"\n",
+    "labels = ['Claude-3-Sonnet \\n Claim & Reasoning', 'Claude-3-Sonnet \\n Verdict Vote' , 'Claude-3-Sonnet \\n Baseline',\n",
+    "          'GPT-4-Turbo \\n Claims & Reasonings', 'GPT-4-Turbo \\n Verdict Vote', 'GPT-4-Turbo \\n Baseline',\n",
+    "          'Mixtral 8x7b \\n Claims & Reasonings', 'Mixtral 8x7b \\n Verdict Vote', 'Mixtral 8x7b \\n Baseline']\n",
+    "metrics = {\n",
+    "    'Precision': (claude_reasoning_precision, claude_all_precision, claude_baseline_precision, \n",
+    "                  gpt_reasoning_precision, gpt_all_precision, gpt_baseline_precision,\n",
+    "                  mixtral_reasoning_precision, mixtral_all_precision, mixtral_baseline_precision),\n",
+    "    'Recall': (claude_reasoning_recall, claude_all_recall, claude_baseline_recall, \n",
+    "               gpt_reasoning_recall, gpt_all_recall, gpt_baseline_recall,\n",
+    "               mixtral_reasoning_recall, mixtral_all_recall, mixtral_baseline_recall),\n",
+    "    'F1 Score': (claude_reasoning_f1, claude_all_f1, claude_baseline_f1, \n",
+    "                 gpt_reasoning_f1, gpt_all_f1, gpt_baseline_f1,\n",
+    "                 mixtral_reasoning_f1, mixtral_all_f1, mixtral_baseline_f1),\n",
+    "}\n",
+    "\n",
+    "x = np.arange(len(labels))  # the label locations\n",
+    "width = 0.25  # the width of the bars\n",
+    "multiplier = 0\n",
+    "\n",
+    "fig, ax = plt.subplots(layout='constrained')\n",
+    "\n",
+    "for attribute, measurement in metrics.items():\n",
+    "    offset = width * multiplier\n",
+    "    rects = ax.barh(x + offset, measurement, width, label=attribute)\n",
+    "    ax.bar_label(rects, padding=3, fmt='%.3f', fontsize = 8)\n",
+    "    multiplier += 1\n",
+    "\n",
+    "\n",
+    "# Add some text for labels, title and custom x-axis tick labels, etc.\n",
+    "ax.set_ylabel('Model & Ablation')\n",
+    "ax.set_xlabel('Metrics')\n",
+    "ax.set_title('Evaluation Metrics by LM and Method')\n",
+    "ax.set_yticks(x + width, labels, ha = 'right')\n",
+    "ax.set_xlim(0, 1)\n",
+    "# ax.set_ylim(0, 250)\n",
+    "\n",
+    "handles, labels = plt.gca().get_legend_handles_labels()\n",
+    "print(handles, labels)\n",
+    "order = [2,1,0]\n",
+    "plt.legend([handles[idx] for idx in order],[labels[idx] for idx in order])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ACL",
+   "display_name": "factchecker",
    "language": "python",
    "name": "python3"
   },
